# cvs2svn-ng

./: .gitignore  CHANGES.md  Dockerfile  README.md  cvs2git  cvs2svn  faq.md  pyproject.toml  run-tests.py
.github/workflows/: CI.yml
contrib/: destroy_repository.py  git-move-refs.py  profile-repos.py  renumber_branch.py  show_db.py  shrink_test_case.py  verify-cvs2svn.py
cvs2svn_lib/: apple_single_filter.py  artifact.py  artifact_manager.py  changeset.py  changeset_database.py  changeset_graph.py  changeset_graph_link.py  check_dependencies_pass.py  checkout_internal.py  collect_data.py  common.py  context.py  cvs_file_items.py  cvs_item.py  cvs_item_database.py  cvs_path.py  cvs_path_database.py  cvs_revision_manager.py  database.py  dvcs_common.py  external_blob_generator.py  fill_source.py  generate_blobs.py  git_output_option.py  git_revision_collector.py  indexed_database.py  keyword_expander.py  main.py  man_writer.py  metadata_database.py  openings_closings.py  pass_manager.py  passes.py  process.py  project.py  property_setters.py  rcs_revision_manager.py  rcs_stream.py  record_table.py  repository_mirror.py  (+16 more)
cvs2svn_lib/test/: rcs_stream_test.py
cvs2svn_rcsparse/: common.py  debug.py  default.py  parse_rcs_file.py  run-tests.py  texttools.py
svntest/: __init__.py  actions.py  factory.py  main.py  objects.py  sandbox.py  testcase.py  tree.py  verify.py  wc.py
